profilelist1exp/unpackaged/objects/Service_Offering__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Services Offering</relationshipLabel>
        <relationshipName>Services_Offering</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSP_Country__c</fullName>
        <label>CSP Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Faroe Islands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSP_Product__c</fullName>
        <description>Story 5561833: FAP --7 new CSP fields</description>
        <label>CSP Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Atmos</fullName>
                </value>
                <value>
                    <fullName>Avamar</fullName>
                </value>
                <value>
                    <fullName>Azure Stack</fullName>
                </value>
                <value>
                    <fullName>Captiva</fullName>
                </value>
                <value>
                    <fullName>Celerra</fullName>
                </value>
                <value>
                    <fullName>Centera</fullName>
                </value>
                <value>
                    <fullName>CLARiiON</fullName>
                </value>
                <value>
                    <fullName>Cloud Tiering Appliance</fullName>
                </value>
                <value>
                    <fullName>Connectrix</fullName>
                </value>
                <value>
                    <fullName>Data Domain</fullName>
                </value>
                <value>
                    <fullName>Data Protection Advisor</fullName>
                </value>
                <value>
                    <fullName>Disk Library for Mainframe DLm</fullName>
                </value>
                <value>
                    <fullName>Document Science</fullName>
                </value>
                <value>
                    <fullName>Documentum</fullName>
                </value>
                <value>
                    <fullName>Documentum/xCP</fullName>
                </value>
                <value>
                    <fullName>Elastic Cloud Storage (ECS)</fullName>
                </value>
                <value>
                    <fullName>Enterprise Hybrid Cloud - VMware</fullName>
                </value>
                <value>
                    <fullName>Greenplum</fullName>
                </value>
                <value>
                    <fullName>InfoArchive</fullName>
                </value>
                <value>
                    <fullName>Isilon</fullName>
                </value>
                <value>
                    <fullName>Mirrorview</fullName>
                </value>
                <value>
                    <fullName>Mozy</fullName>
                </value>
                <value>
                    <fullName>NetWorker</fullName>
                </value>
                <value>
                    <fullName>NS</fullName>
                </value>
                <value>
                    <fullName>Pivotal</fullName>
                </value>
                <value>
                    <fullName>PowerEdge C Series</fullName>
                </value>
                <value>
                    <fullName>PowerEdge FX2</fullName>
                </value>
                <value>
                    <fullName>PowerEdge R Series</fullName>
                </value>
                <value>
                    <fullName>RecoverPoint</fullName>
                </value>
                <value>
                    <fullName>Replication Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Model__c</fullName>
        <description>Story 5561833: FAP --7 new CSP fields</description>
        <label>Cloud Model</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>Off-Prem Dedicated Private</fullName>
                </value>
                <value>
                    <fullName>Off-Prem Shared Private</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Software as a Service</fullName>
                </value>
                <value>
                    <fullName>On-Prem Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Story 5561833: FAP --7 new CSP fields</description>
        <label>Contract Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Pay as you go</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Center_Country__c</fullName>
        <description>7016955: FAP - Availability of Country and State search for CSP separately. Data from CSPDB.</description>
        <label>Data Center Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei Darussalam</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Center_Locations__c</fullName>
        <label>Data Center Locations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Australia ACT</fullName>
                </value>
                <value>
                    <fullName>Australia NSW</fullName>
                </value>
                <value>
                    <fullName>Australia QLD</fullName>
                </value>
                <value>
                    <fullName>Australia SA</fullName>
                </value>
                <value>
                    <fullName>Australia VIC</fullName>
                </value>
                <value>
                    <fullName>Australia WA</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brazil SP</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Canada AB</fullName>
                </value>
                <value>
                    <fullName>Canada BC</fullName>
                </value>
                <value>
                    <fullName>Canada NB</fullName>
                </value>
                <value>
                    <fullName>Canada NS</fullName>
                </value>
                <value>
                    <fullName>Canada ON</fullName>
                </value>
                <value>
                    <fullName>Canada PE</fullName>
                </value>
                <value>
                    <fullName>Canada QC</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Center_State__c</fullName>
        <label>Data Center State</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australian Capital Territory</fullName>
                </value>
                <value>
                    <fullName>New South Wales</fullName>
                </value>
                <value>
                    <fullName>Northern Territory</fullName>
                </value>
                <value>
                    <fullName>Queensland</fullName>
                </value>
                <value>
                    <fullName>South Australia</fullName>
                </value>
                <value>
                    <fullName>Tasmania</fullName>
                </value>
                <value>
                    <fullName>Victoria</fullName>
                </value>
                <value>
                    <fullName>Western Australia</fullName>
                </value>
                <value>
                    <fullName>Acre</fullName>
                </value>
                <value>
                    <fullName>Alagoas</fullName>
                </value>
                <value>
                    <fullName>Amapá</fullName>
                </value>
                <value>
                    <fullName>Amazonas</fullName>
                </value>
                <value>
                    <fullName>Bahia</fullName>
                </value>
                <value>
                    <fullName>Ceará</fullName>
                </value>
                <value>
                    <fullName>Distrito Federal</fullName>
                </value>
                <value>
                    <fullName>Espírito Santo</fullName>
                </value>
                <value>
                    <fullName>Goiás</fullName>
                </value>
                <value>
                    <fullName>Maranhão</fullName>
                </value>
                <value>
                    <fullName>Mato Grasso</fullName>
                </value>
                <value>
                    <fullName>Mato Grosso do Sul</fullName>
                </value>
                <value>
                    <fullName>Minas Gerais</fullName>
                </value>
                <value>
                    <fullName>Pará</fullName>
                </value>
                <value>
                    <fullName>Paraíba</fullName>
                </value>
                <value>
                    <fullName>Paraná</fullName>
                </value>
                <value>
                    <fullName>Pernambuco</fullName>
                </value>
                <value>
                    <fullName>Piauí</fullName>
                </value>
                <value>
                    <fullName>Rio de Janeiro</fullName>
                </value>
                <value>
                    <fullName>Rio Grande do Norte</fullName>
                </value>
                <value>
                    <fullName>Rio Grande do Sul</fullName>
                </value>
                <value>
                    <fullName>Rondônia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Track</label>
        <referenceTo>Partner_Track__c</referenceTo>
        <relationshipLabel>Services Offering</relationshipLabel>
        <relationshipName>Services_Offering1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Offering__c</fullName>
        <description>Story 5561833: FAP --7 new CSP fields</description>
        <label>Service Offering</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Recovery Services</fullName>
                </value>
                <value>
                    <fullName>Advanced Threat Incident Management as a Service</fullName>
                </value>
                <value>
                    <fullName>Application as a Service</fullName>
                </value>
                <value>
                    <fullName>Archive as a Service</fullName>
                </value>
                <value>
                    <fullName>Backup and Recovery as a Service</fullName>
                </value>
                <value>
                    <fullName>Big Data as a Service</fullName>
                </value>
                <value>
                    <fullName>Compute as a Service</fullName>
                </value>
                <value>
                    <fullName>Content Management as a Service</fullName>
                </value>
                <value>
                    <fullName>Data Replication as a Service</fullName>
                </value>
                <value>
                    <fullName>Desktop as a Service</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery Services</fullName>
                </value>
                <value>
                    <fullName>Enterprise Hybrid Cloud - Co-lo</fullName>
                </value>
                <value>
                    <fullName>Enterprise Hybrid Cloud - Hosting</fullName>
                </value>
                <value>
                    <fullName>Enterprise Hybrid Cloud - IaaS</fullName>
                </value>
                <value>
                    <fullName>Exchange as a Service</fullName>
                </value>
                <value>
                    <fullName>File Sync and Share as a Service</fullName>
                </value>
                <value>
                    <fullName>Hyperion as a Service</fullName>
                </value>
                <value>
                    <fullName>Information Security and Compliance as a Service</fullName>
                </value>
                <value>
                    <fullName>IT Service Management as a Service</fullName>
                </value>
                <value>
                    <fullName>Managed Availability Services</fullName>
                </value>
                <value>
                    <fullName>Oracle as a Service</fullName>
                </value>
                <value>
                    <fullName>Platform as a Service</fullName>
                </value>
                <value>
                    <fullName>SAP as a Service</fullName>
                </value>
                <value>
                    <fullName>SAP HANA as a Service</fullName>
                </value>
                <value>
                    <fullName>SharePoint as a Service</fullName>
                </value>
                <value>
                    <fullName>Storage as a Service</fullName>
                </value>
                <value>
                    <fullName>Test Dev as a Service</fullName>
                </value>
                <value>
                    <fullName>Unified Communication as a Service</fullName>
                </value>
                <value>
                    <fullName>Virtual Data Center as a Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <externalId>true</externalId>
        <label>UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Offering</label>
    <nameField>
        <displayFormat>SO-{0000000}</displayFormat>
        <label>Service Offering Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Offering</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>